<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/songs_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/player_toolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/black"
        android:visibility="gone"
        android:layout_gravity="center_vertical"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/selected_thumbnail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/selected_song_thumbnail"/>

            <RelativeLayout
                android:id="@+id/player_control"
                android:layout_alignParentRight="true"
                android:layout_width="48dp"
                android:layout_height="48dp">

                <ImageView
                    android:background="@drawable/oval"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:contentDescription="@string/oval_background"/>

                <ImageView
                    android:id="@+id/player_state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/player_state"/>

                <ProgressBar
                    android:id="@+id/player_progress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RelativeLayout>

        <TextView
            android:id="@+id/selected_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/selected_thumbnail"
            android:layout_toLeftOf="@id/player_control"
            android:paddingLeft="8dp"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

</LinearLayout>
